fix cc feedback